@@ -111,7 +111,35 @@ name|cayenne
 operator|.
 name|di
 operator|.
-name|*
+name|DIBootstrap
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|cayenne
+operator|.
+name|di
+operator|.
+name|Injector
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|cayenne
+operator|.
+name|di
+operator|.
+name|Key
 import|;
 end_import
 
@@ -126,6 +154,20 @@ operator|.
 name|di
 operator|.
 name|Module
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|cayenne
+operator|.
+name|di
+operator|.
+name|Binder
 import|;
 end_import
 
