@@ -55,20 +55,6 @@ name|cayenne
 operator|.
 name|di
 operator|.
-name|Binder
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|cayenne
-operator|.
-name|di
-operator|.
 name|DIBootstrap
 import|;
 end_import
@@ -525,38 +511,6 @@ argument_list|(
 operator|new
 name|ServerModule
 argument_list|()
-block|{
-annotation|@
-name|Override
-specifier|public
-name|void
-name|configure
-parameter_list|(
-name|Binder
-name|binder
-parameter_list|)
-block|{
-name|super
-operator|.
-name|configure
-argument_list|(
-name|binder
-argument_list|)
-expr_stmt|;
-name|ServerModule
-operator|.
-name|contributeProjectLocations
-argument_list|(
-name|binder
-argument_list|)
-operator|.
-name|add
-argument_list|(
-literal|"CayenneModeler"
-argument_list|)
-expr_stmt|;
-block|}
-block|}
 argument_list|)
 expr_stmt|;
 name|modules
