@@ -13,6 +13,7 @@ Date:
 ----------------------------------
 Changes/New Features:
 
+CAY-2377 Cleanup deprecated code.
 
 Bug Fixes:
 
